# FourthRiver

./: '  .gitignore  .gitmodules  CMakeLists.txt  Component.h  ComponentManager.h  Components.h  FourthRiver.h  Mesh.h  Object.h  ObjectGroup.h  README.md  Shader.h  TigerEngine.h  TigerEngine.trace  Transform.h  imgui.ini  journal.csv
assets/: groupTest.grp
examples/: A.cpp  Application.cpp  Cube.cpp  Group.cpp  GroupTest.cpp  Kitten.cpp  Lighting.cpp  Simple.cpp
include/: Component.h  ComponentManager.h  Components.h  FourthRiver.h  LightContext.h  LightSource.h  Lighting.h  Material.h  Mesh.h  Object.h  ObjectGroup.h  Shader.h  ShaderPipeline.h  Texture.h  Transform.h
lib/JGL/: Callbacks.h  Camera.h  Framebuffer.h  GPUBuffer.h  JGL.h  LightManager.h  Mesh.h  OpenGL.h  Scene.h  Shader.h  Texture.h  Transform.h  UniformBufferObject.h  VertexArray.h  common.h
lib/JGL/src/: Callbacks.cpp  Camera.cpp  Framebuffer.cpp  GPUBuffer.cpp  LightManager.cpp  OpenGL.cpp  Renderer.cpp  Scene.cpp  Shader.cpp  Texture.cpp  Transform.cpp  UniformBufferObject.cpp  VertexArray.cpp  common.cpp
lib/JM/: JMath.cpp  JMath.h  JMathTemplateDefinitions.cpp  JMath_OLD.h
lib/JM/src/: JMath.cpp
lib/glad/: glad.c  glad.h
src/: Application.cpp  Component.cpp  ComponentManager.cpp  ComponentManagerTemplates.cpp  FourthRiver.cpp  LightContext.cpp  LightSource.cpp  Mesh.cpp  Object.cpp  ObjectGroup.cpp  Shader.cpp  ShaderPipeline.cpp  ShaderPipelineModules.cpp  Texture.cpp  TigerEngine.cpp  Transform.cpp  main.cpp  shader.glsl
